# clarification

./: .gitignore  copy_dataset.sh  copy_to_cloudcopies.sh  create_ext4_image.sh  denoise_audio.ipynb  denoise_audio_2.ipynb  denoise_audio_4.ipynb  denoise_audio_lstm.ipynb  experiment_1.py  inference_benchmark_1.py  initial_cloud_setup.sh  layer_calculator.py  layer_calculator_2.py  layer_calculator_3.py  pylintrc  requirements.txt  run_tensorboard.sh  setup_cpp.py  train_classifier.py  train_dense_lstm.py  train_multiple.py  train_multiple.sh  vast_cloud_setup_1.sh  vast_cloud_setup_2.sh  vssh.sh
clarification/: __init__.py  utils.py
clarification/configs/: __init__.py  audio_trainer_configs.py  dataset_configs.py  inference_configs.py  log_configs.py  loss_configs.py  mixed_precision_configs.py  model_training_configs.py  validation_configs.py
clarification/data/: commonvoice_loader.py
clarification/datas/: __init__.py  commonvoice_loader.py  cpp_loader.py  distorted_dataset.py  loader_benchmark.py  noisy_dataset.py  prepare_data.py  prepare_data_distortion.py  prepare_data_opusit.py  test_cpp_loader.py  test_vram_usage.py
clarification/eval/: inference_benchmark.py
clarification/loss/: __init__.py  distoration_detection_dense_encoder.py  distortion_detection.py  distortion_detection_combo.py  distortion_detection_spec.py
clarification/models/: __init__.py  clarification_configurable_lstm.py  clarification_dense.py  clarification_dense_fixed_features.py  clarification_dense_lstm.py  clarification_dense_lstm_lessold.py  clarification_dense_lstm_old.py  clarification_dense_old.py  clarification_lstm.py  clarification_resnet.py  clarification_simple.py
clarification/modules/: __init__.py  conv_block.py  down_layers.py  glue.py  out_layer.py  pooling_downsampler.py  res_block.py  up_layers.py
clarification/notebooks/: 70ks.txt  benchmark_results.txt  custom_loss_functions.ipynb  denoise_audio.ipynb  denoise_audio_5.ipynb  denoise_audio_unet.ipynb  good_layer_sizes.txt  model_experiments.ipynb  old_configs.txt  todo_notes_questions.ipynb  todo_notes_questions.md
clarification/schedulers/: __init__.py  interpolating.py
clarification/training/: __init__.py  audio_trainer.py  train_multiple.py
clarification/training/configs/: __init__.py  dataset_configs.py  (+6 more)
clarification/util/: __init__.py  misc.py  tensor_functions.py
cpp/: CMakeLists.txt
cpp/src/: ClarificationDataset.cpp  ClarificationDataset.h  ClarificationLz4Dataset.cpp  ClarificationLz4Dataset.h  ClarificationOpusDataset.cpp  ClarificationOpusDataset.h  bindings.cpp
cpp/tests/: ClarificationDatasetTest.cpp  ClarificationDatasetTest.h
data/: prepare_data.py
gpu_config/: README.md  gpu-switch.service  gpu-switch.sh  install.sh  install_grub.sh  java-5090.sh  run-on-5090.sh  xorg-3090-primary.conf  xorg-5090-primary.conf
runs/Dec08_17-57-21_MacBookAir/: events.out.tfevents.1733702241.MacBookAir.33991.0
runs/Dec08_17-58-32_MacBookAir/: events.out.tfevents.1733702312.MacBookAir.34622.0
runs/Dec08_17-59-41_MacBookAir/: events.out.tfevents.1733702381.MacBookAir.35253.0
runs/Dec08_18-55-41_MacBookAir/: events.out.tfevents.1733705741.MacBookAir.48149.0
runs/Dec08_19-01-02_MacBookAir/: events.out.tfevents.1733706062.MacBookAir.50860.0
runs/Dec08_19-01-35_MacBookAir/: events.out.tfevents.1733706095.MacBookAir.51174.0
runs/Dec08_19-03-38_MacBookAir/: events.out.tfevents.1733706218.MacBookAir.52212.0
runs/Dec08_19-05-35_MacBookAir/: events.out.tfevents.1733706335.MacBookAir.53217.0
runs/Dec08_19-46-03_MacBookAir/: events.out.tfevents.1733708763.MacBookAir.73291.0
runs/Dec08_19-46-30_MacBookAir/: events.out.tfevents.1733708790.MacBookAir.73560.0
runs/Dec09_19-44-15_MacBookAir/: events.out.tfevents.1733795055.MacBookAir.7717.0
runs/Dec09_20-17-57_MacBookAir/: events.out.tfevents.1733797077.MacBookAir.24500.0
runs/Dec09_20-26-53_MacBookAir/: events.out.tfevents.1733797613.MacBookAir.28790.0
runs/Dec09_20-31-45_MacBookAir/: events.out.tfevents.1733797905.MacBookAir.31179.0
runs/Dec09_20-35-46_MacBookAir/: events.out.tfevents.1733798146.MacBookAir.33136.0
runs/Dec09_21-02-40_MacBookAir/: events.out.tfevents.1733799760.MacBookAir.43987.0
runs/Dec09_21-03-47_MacBookAir/: events.out.tfevents.1733799827.MacBookAir.44570.0
runs/Dec09_21-04-52_MacBookAir/: events.out.tfevents.1733799892.MacBookAir.45167.0
runs/Dec09_21-07-11_MacBookAir/: events.out.tfevents.1733800031.MacBookAir.46414.0
runs/Dec09_21-08-16_MacBookAir/: events.out.tfevents.1733800096.MacBookAir.47001.0
runs/Dec09_21-11-39_MacBookAir/: events.out.tfevents.1733800299.MacBookAir.48722.0
runs/Dec09_21-14-34_MacBookAir/: events.out.tfevents.1733800474.MacBookAir.50261.0
runs/Dec09_21-15-09_MacBookAir/: events.out.tfevents.1733800509.MacBookAir.50604.0
runs/Dec09_21-16-10_MacBookAir/: events.out.tfevents.1733800570.MacBookAir.51141.0
runs/Dec09_21-20-09_MacBookAir/: events.out.tfevents.1733800809.MacBookAir.53168.0
runs/Dec09_21-22-21_MacBookAir/: events.out.tfevents.1733800941.MacBookAir.54289.0
runs/Dec09_21-36-44_MacBookAir/: events.out.tfevents.1733801804.MacBookAir.61415.0
runs/Dec10_17-14-10_jacob-kubuntu/: events.out.tfevents.1733872450.jacob-kubuntu.41835.0
runs/Dec10_17-15-04_jacob-kubuntu/: events.out.tfevents.1733872504.jacob-kubuntu.41982.0
runs/Dec10_17-15-54_jacob-kubuntu/: events.out.tfevents.1733872554.jacob-kubuntu.42237.0
runs/Dec10_17-16-18_jacob-kubuntu/: events.out.tfevents.1733872578.jacob-kubuntu.42401.0
runs/Dec10_17-17-54_jacob-kubuntu/: events.out.tfevents.1733872674.jacob-kubuntu.42769.0
scripts/: copy_clarification_to_cloud.sh  copy_dataset.sh  copy_wheelcache_to_cloud.sh  full_vast_setup.sh  mount_ext4_image.sh  populate_ssh_agent_forwarding.sh  source_me_for_exports.sh  tv.sh  vast_cloud_setup_1.sh  vast_cloud_setup_2.sh  vssh_tunnel.sh
tests/: __init__.py  generate_test_data.py  run_all_tests.py  test_config.py  test_data_loaders.py  test_loader_comparison.py  test_prepare_data_perf.py  test_resume.py  test_training_cycle.py
training_scripts/: train_dense_lstm.py
(+2 files in other folders)
